# jupyterlite-pyodide-lock

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  environment.yml  pixi.toml  pyproject.toml
.github/: environment-test-browser.yml  environment-test-webdriver.yml  environment-test.yml  pull_request_template.md  requirements-build.txt
.github/ISSUE_TEMPLATE/: bug_report.md  docs.md  feature_request.md  release.md
.github/workflows/: badges.yml  pages.yml  test.yml
_scripts/: .markdownlint.yaml  dodo.py  fix-deps.py  fix-tasks.py  nb-lint.py  package.json  replace-between.py
_scripts/fake-docs/: conf.py  index.rst
_scripts/vale/: .vale.ini  check.py
_scripts/vale/config/vocabularies/jlpl/: accept.txt
contrib/jupyterlite-pyodide-lock-webdriver/: LICENSE  README.md  pyproject.toml
contrib/jupyterlite-pyodide-lock-webdriver/src/jupyterlite_pyodide_lock_webdriver/: __init__.py  browsers.py  locker.py
contrib/jupyterlite-pyodide-lock-webdriver/tests/: __init__.py  conftest.py  test_cli.py  test_version.py
docs/: .readthedocs.yaml  .readthedocs.yml  api.md  conf.py  contributing.ipynb  demo.md  environment-docs.yml  environment-gha.yml  environment-rtd.yml  environment.yml  index.md  sphinx-j2.toml
docs/_static/: theme.css
docs/_templates/: layout.html
docs/api/: index.md  jupyterlite-pyodide-lock-uv.md  jupyterlite-pyodide-lock-webdriver.md  jupyterlite-pyodide-lock.md  webdriver.md
docs/configuration/: core.ipynb  index.md  uv.ipynb  webdriver.ipynb
docs/form/: build.data.toml  build.schema.toml  index.md  project.schema.toml  urljsf.toml
docs/lockers/: index.md  webdriver.md
examples/: README.ipynb  README.md  jupyter-lite.json  jupyter_lite_config.json
examples/files/: README.ipynb
py/jupyterlite-pyodide-lock/: README.md  pyproject.toml
py/jupyterlite-pyodide-lock-uv/: LICENSE  pyproject.toml
py/jupyterlite-pyodide-lock-uv/src/jupyterlite_pyodide_lock_uv/: __init__.py  locker.py
py/jupyterlite-pyodide-lock-uv/tests/: __init__.py  conftest.py  test_cli.py  test_version.py
py/jupyterlite-pyodide-lock-webdriver/: README.md  pyproject.toml
py/jupyterlite-pyodide-lock-webdriver/src/jupyterlite_pyodide_lock_webdriver/: locker.py
py/jupyterlite-pyodide-lock-webdriver/tests/: conftest.py  test_cli.py
py/jupyterlite-pyodide-lock/src/jupyterlite_pyodide_lock/: __init__.py  app.py  constants.py  utils.py
py/jupyterlite-pyodide-lock/src/jupyterlite_pyodide_lock/addons/: _base.py  fix_html.py  fix_html_config.py  lock.py  offline.py
py/jupyterlite-pyodide-lock/src/jupyterlite_pyodide_lock/lockers/: __init__.py  _base.py  browser.py  handlers.py  tornado.py
py/jupyterlite-pyodide-lock/src/jupyterlite_pyodide_lock/lockers/handlers/: __init__.py  cacher.py  freezer.py  lock.html.j2  mime.py  solver.py
py/jupyterlite-pyodide-lock/tests/: conftest.py  test_cli.py  test_repo.py
recipe/: recipe.yaml
src/jupyterlite_pyodide_lock/: __init__.py  app.py  constants.py  utils.py
src/jupyterlite_pyodide_lock/addons/: __init__.py  lock.py
src/jupyterlite_pyodide_lock/lockers/: __init__.py  _base.py  browser.py  tornado.py
src/jupyterlite_pyodide_lock/lockers/handlers/: __init__.py  cacher.py  freezer.py  lock.html.j2  logger.py  mime.py  solver.py
tests/: __init__.py  conftest.py  test_cli.py  test_repo.py  test_version.py
