[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jupyterlite-pyodide-lock"
version = "0.1.0"
description = "Create pre-solved environments for jupyterlite-pyodide-kernel with pyodide-lock"
license = { file = "LICENSE" }
authors = [
    {name = "JupyterLite Contributors"},
]
readme = "README.md"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "jinja2",
    "jupyterlite-pyodide-kernel >=0.3.1,<0.4.0",
    "pyodide-lock[wheel] ==0.1.0a4",
    "tornado >=6.1.0",
]

[project.entry-points."jupyterlite.addon.v0"]
pyodide-lock = "jupyterlite_pyodide_lock.addons.lock:PyodideLockAddon"

[project.entry-points."jupyterlite-pyodide-lock.locker.v0"]
browser = "jupyterlite_pyodide_lock.lockers.browser:BrowserLocker"

[tool.flit.sdist]
include = ["tests/"]

[project.optional-dependencies]
test = [
    "pytest >=8,<9",
    "pytest-cov",
    "pytest-html",
]

[tool.pytest.ini_options]
cache_dir = "build/.cache/pytest"
testpaths = ["tests"]
addopts = [
  # for humans
  "--html=build/reports/pytest.html",
  "--self-contained-html",
  # cov
  "--cov-report=html:build/reports/htmlcov",
  "--cov-report=term-missing:skip-covered",
  "--color=yes",
  "--cov=jupyterlite_pyodide_lock",
  "--cov-branch",
  "--cov-context=test",
  "--no-cov-on-fail",
  "--cov-fail-under=100",
  # treat warnings as errors
  "-Werror",
  # misc
  "--tb=long",
  "-vv",
]

[tool.coverage.run]
data_file = "build/reports/.coverage"
disable_warnings = ["no-data-collected", "module-not-measured"]

[tool.coverage.html]
show_contexts = true

[tool.doit]
backend = "sqlite3"
verbosity = 2
par_type = "thread"
dodoFile = "_scripts/dodo.py"

[tool.ruff]
target-version = "py39"
line-length = 88
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
  "A", "B", "C", "DTZ", "E", "EM", "F", "FBT", "I", "ICN", "N",
  "PLC", "PLE", "PLR", "PLW", "Q", "RUF", "S", "SIM", "T", "TID", "UP",
  "W", "YTT",
]
ignore = []
exclude = []

[tool.ruff.lint.per-file-ignores]
"_scripts/dodo.py" = ["A001", "C408", "N812", "RUF012", "RUF017", "UP006", "T201"]
