[build-system]
requires = [
  "flit_core >=3.9,<4",
]
build-backend = "flit_core.buildapi"

[project]
name = "jupyterlite-pyodide-lock"
version = "0.1.0a0"
description = "Create pre-solved environments for jupyterlite-pyodide-kernel with pyodide-lock"
authors = [
  {name = "JupyterLite Contributors"},
]
readme = "README.md"
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
  "jupyterlite-core >=0.3.0,<0.4.0",
  "jupyterlite-pyodide-kernel >=0.3.1,<0.4.0 ; platform_machine != \"wasm32\"",
  "pyodide-lock[wheel] >=0.1.0a4,<0.1.0a6",
  "tornado >=6.1.0 ; platform_machine != \"wasm32\"",
]

[project.license]
file = "LICENSE"

[project.urls]
"Bug Tracker" = "https://github.com/bollwyvl/jupyterlite-pyodide-lock/issues"
Changelog = "https://github.com/bollwyvl/jupyterlite-pyodide-lock/blob/main/CHANGELOG.md"
PyPI = "https://pypi.org/project/jupyterlite-pyodide-lock"
Source = "https://github.com/bollwyvl/jupyterlite-pyodide-lock/tree/main"

[project.entry-points."jupyterlite.addon.v0"]
pyodide-lock = "jupyterlite_pyodide_lock.addons.lock:PyodideLockAddon"

[project.entry-points."jupyterlite_pyodide_lock.locker.v0"]
BrowserLocker = "jupyterlite_pyodide_lock.lockers.browser:BrowserLocker"

[project.optional-dependencies]
test = [
  "pytest >=8,<9",
  "pytest-cov",
  "pytest-html",
]

[tool.flit.sdist]
include = [
  "tests/",
]

[tool.pytest.ini_options]
cache_dir = "build/.cache/pytest"
testpaths = [
  "tests",
]
addopts = [
  "--html=build/reports/pytest.html",
  "--self-contained-html",
  "--cov-report=html:build/reports/htmlcov",
  "--cov-report=term-missing:skip-covered",
  "--color=yes",
  "--cov=jupyterlite_pyodide_lock",
  "--cov-branch",
  "--cov-context=test",
  "--no-cov-on-fail",
  "--cov-fail-under=100",
  "-Werror",
  "--tb=long",
  "--durations=3",
  "-vv",
]

[tool.coverage.run]
data_file = "build/reports/.coverage"
disable_warnings = [
  "no-data-collected",
  "module-not-measured",
]

[tool.coverage.html]
show_contexts = true

[tool.doit]
backend = "sqlite3"
verbosity = 2
par_type = "thread"
dodoFile = "_scripts/dodo.py"

[tool.ruff]
target-version = "py310"
line-length = 88
extend-include = [
  "*.ipynb",
]
cache-dir = "build/.cache/ruff"

[tool.ruff.lint]
select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "D",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "G",
  "I",
  "ICN",
  "INP",
  "ISC",
  "N",
  "NPY",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "T10",
  "T20",
  "TCH",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "D211",
  "D203",
  "D213",
  "ANN101",
  "ANN401",
  "PGH003",
  "RUF015",
  "COM812",
  "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"_scripts/dodo.py" = [
  "A001",
  "C408",
  "INP001",
  "N812",
  "RUF012",
  "RUF017",
  "T201",
  "UP006",
  "S603",
]
