[build-system]
requires = [
  "flit_core >=3.9,<4",
]
build-backend = "flit_core.buildapi"

[project]
name = "jupyterlite-pyodide-lock-webdriver"
version = "0.1.0a0"
description = "A WebDriver strategy for jupyterlite-pyodide-kernel-lock"
authors = [
  {name = "JupyterLite Contributors"},
]
readme = "README.md"
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
  "jupyterlite-pyodide-lock ==0.1.0a0",
  "selenium >=4.19,<4.20",
]

[project.license]
file = "LICENSE"

[project.urls]
"Bug Tracker" = "https://github.com/bollwyvl/jupyterlite-pyodide-lock/issues"
Changelog = "https://github.com/bollwyvl/jupyterlite-pyodide-lock/blob/main/CHANGELOG.md"
PyPI = "https://pypi.org/project/jupyterlite-pyodide-lock"
Source = "https://github.com/bollwyvl/jupyterlite-pyodide-lock/tree/main"

[project.entry-points."jupyterlite_pyodide_lock.locker.v0"]
webdriver = "jupyterlite_pyodide_lock_webdriver.locker:WebDriverLocker"

[project.optional-dependencies]
test = [
  "pytest >=8,<9",
  "pytest-cov",
  "pytest-html",
]

[tool.flit.sdist]
include = [
  "tests/",
]

[tool.pytest.ini_options]
cache_dir = "build/.cache/pytest"
testpaths = [
  "tests",
]
addopts = [
  "--html=build/reports/pytest.html",
  "--self-contained-html",
  "--cov-report=html:build/reports/htmlcov",
  "--cov-report=term-missing:skip-covered",
  "--color=yes",
  "--cov=jupyterlite_pyodide_lock_webdriver",
  "--cov-branch",
  "--cov-context=test",
  "--no-cov-on-fail",
  "--cov-fail-under=100",
  "-Werror",
  "--tb=long",
  "-vv",
]

[tool.coverage.run]
data_file = "build/reports/.coverage"
disable_warnings = [
  "no-data-collected",
  "module-not-measured",
]

[tool.coverage.html]
show_contexts = true
