[build-system]
build-backend = "flit_core.buildapi"
requires = [
  "flit-core >=3.12.0,<4",
]

[project]
authors = [
  {name = "jupyterlite-pyodide-lock contributors"},
]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "jupyterlite-pyodide-lock ==0.1.2",
  "selenium >=4.19",
]
description = "A WebDriver strategy for jupyterlite-pyodide-lock"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
name = "jupyterlite-pyodide-lock-webdriver"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.2"

[project.urls]
"Bug Tracker" = "https://github.com/deathbeds/jupyterlite-pyodide-lock/issues"
Changelog = "https://github.com/deathbeds/jupyterlite-pyodide-lock/blob/main/CHANGELOG.md"
Documentation = "https://jupyterlite-pyodide-lock.rtfd.org"
PyPI = "https://pypi.org/project/jupyterlite-pyodide-lock"
Source = "https://github.com/deathbeds/jupyterlite-pyodide-lock/tree/main"

[project.entry-points."jupyterlite_pyodide_lock.locker.v0"]
WebDriverLocker = "jupyterlite_pyodide_lock_webdriver.locker:WebDriverLocker"

[project.optional-dependencies]
test = [
  "pytest >=8,<9",
  "pytest-cov",
  "pytest-html",
]

[tool.flit.sdist]
include = ["LICENSE", "tests/"]
