[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jupyterlite-pyodide-lock"
description = "Create pre-solved environments for jupyterlite-pyodide-kernel with pyodide-lock"
version = "0.1.0"
authors = [
    {name = "JupyterLite Contributors"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dependencies = [
    "jupyterlite-pyodide-kernel >=0.3.0,<0.4.0",
    "pyodide-lock[wheel] ==0.1.0a4",
    "tornado >=6.1.0",
]
[project.entry-points."jupyterlite.addon.v0"]
pyodide-lock = "jupyterlite_pyodide_lock.addon:PyodideLockAddon"

[project.optional-dependencies]
test = [
    "pytest >=8,<9",
    "pytest-console-scripts",
    "pytest-cov",
    "pytest-html",
    "pytest-sugar",
    "pytest-xdist",
]
selenium = [
    "selenium >=4.19.0,<5.0.0",
]

[tool.pytest.ini_options]
cache_dir = "build/.cache/pytest"
script_launch_mode = "subprocess"
addopts = [
  # for humans
  "--html=build/reports/pytest.html",
  "--self-contained-html",
  "--cov-report=html:build/reports/htmlcov",
  "--cov-report=term-missing:skip-covered",
  "--color=yes",
  # xdist
  "--dist=worksteal",
  # cov
  "--cov=jupyterlite_pyodide_lock",
  "--cov-branch",
  "--cov-context=test",
  "--no-cov-on-fail",
  # misc
  "--tb=long",
]

[tool.coverage.html]
show_contexts = true

[tool.coverage.report]
exclude_lines = [
  "except ImportError as err:",
  "except MissingDependencyError as err:",
  "if TYPE_CHECKING:",
  "pragma: no cover",
]

[tool.coverage.run]
data_file = "build/reports/coverage/.coverage"
