[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jupyterlite-pyodide-lock"
description = "Create pre-solved environments for jupyterlite-pyodide-kernel with pyodide-lock"
version = "0.1.0"
authors = [
    {name = "JupyterLite Contributors"},
]
readme = "README.md"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "jupyterlite-pyodide-kernel >=0.3.0,<0.4.0",
    "pyodide-lock[wheel] ==0.1.0a4",
    "tornado >=6.1.0",
]

[project.entry-points."jupyterlite.addon.v0"]
pyodide-lock = "jupyterlite_pyodide_lock.addons.lock:PyodideLockAddon"

[project.entry-points."jupyterlite-pyodide-lock.locker.v0"]
browser = "jupyterlite_pyodide_lock.lockers.browser:BrowserLocker"

[project.optional-dependencies]
test = [
    "pytest >=8,<9",
    "pytest-console-scripts",
    "pytest-cov",
    "pytest-html",
    "pytest-sugar",
    "pytest-xdist",
]

[tool.pytest.ini_options]
cache_dir = "build/.cache/pytest"
script_launch_mode = "subprocess"
addopts = [
  # for humans
  "--html=build/reports/pytest.html",
  "--self-contained-html",
  "--cov-report=html:build/reports/htmlcov",
  "--cov-report=term-missing:skip-covered",
  "--color=yes",
  "--cov-fail-under=14",
  # cov
  "--cov=jupyterlite_pyodide_lock",
  "--cov-branch",
  "--cov-context=test",
  "--no-cov-on-fail",
  # misc
  "--tb=long",
]

[tool.coverage.run]
data_file = "build/reports/.coverage"

[tool.coverage.html]
show_contexts = true
