[build-system]
build-backend = "flit_core.buildapi"
requires = [
  "flit-core >=3.12.0,<4",
]

[project]
authors = [
  {name = "jupyterlite-pyodide-lock contributors"},
]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "jupyterlite-core >=0.3.0,<0.8.0",
  "jupyterlite-pyodide-kernel >=0.3.1,<0.8.0 ; platform_machine != \"wasm32\"",
  "pyodide-lock[wheel] >=0.1.0a4,<0.2.0",
  "tornado >=6.1.0 ; platform_machine != \"wasm32\"",
  "psutil >=6",
]
description = "Create pre-solved environments for jupyterlite-pyodide-kernel with pyodide-lock"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
name = "jupyterlite-pyodide-lock"
readme = "README.md"
requires-python = ">=3.10"
version = "0.2.0"

[project.urls]
"Bug Tracker" = "https://github.com/deathbeds/jupyterlite-pyodide-lock/issues"
Changelog = "https://github.com/deathbeds/jupyterlite-pyodide-lock/blob/main/CHANGELOG.md"
Documentation = "https://jupyterlite-pyodide-lock.rtfd.org"
PyPI = "https://pypi.org/project/jupyterlite-pyodide-lock"
Source = "https://github.com/deathbeds/jupyterlite-pyodide-lock/tree/main"

[project.scripts]
jupyter-pyodide-lock = "jupyterlite_pyodide_lock.app:main"

[project.entry-points."jupyterlite.addon.v0"]
fix-html-config = "jupyterlite_pyodide_lock.addons.fix_html:FixHtmlAddon"
jupyterlite-pyodide-lock = "jupyterlite_pyodide_lock.addons.lock:PyodideLockAddon"
jupyterlite-pyodide-lock-offline = "jupyterlite_pyodide_lock.addons.offline:PyodideLockOfflineAddon"

[project.entry-points."jupyterlite_pyodide_lock.locker.v0"]
BrowserLocker = "jupyterlite_pyodide_lock.lockers.browser:BrowserLocker"

[project.optional-dependencies]
test = [
  "pytest >=8,<9",
  "pytest-cov",
  "pytest-html",
  "jupyterlite-core-with-contents",
]

[tool.flit.sdist]
include = ["LICENSE", "tests/"]
